--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@ PRESSTONEWS
 </head>
 <body>
 <div id="container">
-<div id="upper_bar"><img src="/img/logo.jpg"></img>
+<div id="upper_bar"><img src="img/logo.jpg"></img>
 <div id="formulario">
 <form>
 <font color="white">user:</font> <input type="text" name="name" id="name" value="" />
@@ -15,10 +15,10 @@ PRESSTONEWS
 <input type="submit" value="submit" />
 </form>	<br />	</div>					
 </div>
-<div id="middle_left"><img src="/img/deporte.jpg"></img></div>
-<div id="middle_right"><img src="/img/vietnam.jpg"></img></div>
-<div id="bottom_left"><img src="/img/fabrica.jpg"></img></div>
-<div id="bottom_right"><img src="/img/Android.jpg"></img></div>
+<div id="middle_left"><img src="img/deporte.jpg"></img></div>
+<div id="middle_right"><img src="img/vietnam.jpg"></img></div>
+<div id="bottom_left"><img src="img/fabrica.jpg"></img></div>
+<div id="bottom_right"><img src="img/Android.jpg"></img></div>
 <div id="footer"></div>
 </div>
 </body>
