ultimos cambios realizados
hay que mirar un problema con las etiquetas<a> en la seccion de facebook
y demas.....

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 <html>
 <LINK REL="stylesheet" HREF="css/index.css" TYPE="text/css">
+<LINK REL="stylesheet" HREF="css/menu.css" TYPE="text/css">
 <head>
 <title>
 PRESSTONEWS
@@ -13,13 +14,21 @@ PRESSTONEWS
 <font color="white">user:</font> <input type="text" name="name" id="name" value="" />
 <font color="white">pass</font> <input type="text" name="email" id="email" value="" />
 <input type="submit" value="submit" />
-</form>	<br />	</div>					
+</form>	<br /></div>	
+<div id="menu_bar"></div>				
 </div>
 <div id="middle_left"><img src="img/deporte.jpg"></img></div>
 <div id="middle_right"><img src="img/vietnam.jpg"></img></div>
 <div id="bottom_left"><img src="img/fabrica.jpg"></img></div>
 <div id="bottom_right"><img src="img/Android.jpg"></img></div>
-<div id="footer"></div>
+<div id="footer">
+<div id="social_networks">
+<img src="img/twitter.png"></img>
+<img src="img/facebook.png"></img>
+<img src="img/blogger.png"></img>
+<img src="img/linkedn.png"></img>
+</div>
+</div>
 </div>
 </body>
 </html>
