--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,10 @@ PRESSTONEWS
 <div id="bottom_right"><img src="img/Android.jpg"></img></div>
 <div id="footer">
 <div id="social_networks">
-<img src="img/twitter.png"></img>
-<img src="img/facebook.png"></img>
-<img src="img/blogger.png"></img>
-<img src="img/linkedn.png"></img>
+<a href="https://www.twitter.com/login"><img src="img/twitter.png"/></a>
+<a href="https://es-es.facebook.com/login.php"><img src="img/facebook.png"/></a>
+<a href="http://www.blogger.com/start?hl=es‎"><img src="img/blogger.png"/></a>
+<a href="http://es.linkedin.com"><img src="img/linkedn.png"/></a>
 </div>
 </div>
 </div>
