--- a/www/index.html
+++ b/www/index.html
@@ -2,33 +2,65 @@
 <LINK REL="stylesheet" HREF="css/index.css" TYPE="text/css">
 <LINK REL="stylesheet" HREF="css/menu.css" TYPE="text/css">
 <head>
-<title>
-PRESSTONEWS
-</title>
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+<title>PRESSTONEWS</title>
 </head>
 <body>
-<div id="container">
-<div id="upper_bar"><img src="img/logo.jpg"></img>
-<div id="formulario">
-<form>
-<font color="white">user:</font> <input type="text" name="name" id="name" value="" />
-<font color="white">pass</font> <input type="text" name="email" id="email" value="" />
-<input type="submit" value="submit" />
-</form>	<br /></div>	
-<div id="menu_bar"></div>				
-</div>
-<div id="middle_left"><img src="img/deporte.jpg"></img></div>
-<div id="middle_right"><img src="img/vietnam.jpg"></img></div>
-<div id="bottom_left"><img src="img/fabrica.jpg"></img></div>
-<div id="bottom_right"><img src="img/Android.jpg"></img></div>
-<div id="footer">
-<div id="social_networks">
-<a href="https://www.twitter.com/login"><img src="img/twitter.png"/></a>
-<a href="https://es-es.facebook.com/login.php"><img src="img/facebook.png"/></a>
-<a href="http://www.blogger.com/start?hl=es‎"><img src="img/blogger.png"/></a>
-<a href="http://es.linkedin.com"><img src="img/linkedn.png"/></a>
-</div>
-</div>
-</div>
+	<div id="container">
+		<div id="upper_bar"><img src="img/logo.jpg"></img>
+			<div id="formulario">
+				<form>
+					<font color="white">user: </font> <input type="text" name="name" id="name" value="" />
+					<font color="white">pass: </font> <input type="text" name="email" id="email" value="" />
+					<input type="submit" value="submit" />
+				</form>	<br /></div>				
+			</div>
+			<div id="menu_bar">
+
+<ul class="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Nosotros</a>
+        <ul>
+           <li><a href="#">Historia</a></li>
+           <li><a href="#">Galería</a></li>
+           <li><a href="#">Social</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Nuestros trabajos</a>
+        <ul>
+            <li><a href="#">Diseño Web</a></li>
+            <li><a href="#">Diseño Gráfico</a></li>
+            <li><a href="#">Programación</a></li>
+            <li><a href="#">Edición de Vídeo</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Clientes</a>
+        <ul>
+           <li><a href="#">Casos de Éxito</a></li>
+           <li><a href="#">Internacionales</a></li>
+        </ul>
+    </li>
+        <li><a href="#">Multimedia</a>
+        <ul>
+           <li><a href="#">Galería</a></li>
+           <li><a href="#">Vídeo Galería</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Contacto</a></li>
+</ul>
+			</div>
+			<div id="middle_left"><img src="img/deporte.jpg"></img></div>
+			<div id="middle_right"><img src="img/vietnam.jpg"></img></div>
+			<div id="bottom_left"><img src="img/fabrica.jpg"></img></div>
+			<div id="bottom_right"><img src="img/Android.jpg"></img></div>
+			<div id="footer">
+			<div id="social_networks">
+				<a href="https://www.twitter.com/login"><img src="img/twitter.png"/></a>
+				<a href="https://es-es.facebook.com/login.php"><img src="img/facebook.png"/></a>
+				<a href="http://www.blogger.com/start?hl=es‎"><img src="img/blogger.png"/></a>
+				<a href="http://es.linkedin.com"><img src="img/linkedn.png"/></a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
