cambios en estilo divs etc

--- a/www/index.html
+++ b/www/index.html
@@ -16,37 +16,46 @@
 				</form>	<br /></div>				
 			</div>
 			<div id="menu_bar">
-
 <ul class="menu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Nosotros</a>
+    <li><a href="#">NOTICIAS</a>
+		<ul>
+		<li><a href="#">NACIONAL</a></li>
+		<li><a href="#">INTERNACIONAL</a></li>
+		<li><a href="#">ECONOMIA</a></li>
+		<li><a href="#">SOCIEDAD</a></li>
+		</ul>
+		</li>
+    <li><a href="#">DEPORTES</a>
         <ul>
-           <li><a href="#">Historia</a></li>
-           <li><a href="#">Galería</a></li>
-           <li><a href="#">Social</a></li>
+           <li><a href="#">FUTBOL</a></li>
+           <li><a href="#">TENIS</a></li>
+           <li><a href="#">BALONCESTO</a></li>
+		   <li><a href="#">FORMULA1</a></li>
         </ul>
     </li>
-    <li><a href="#">Nuestros trabajos</a>
+    <li><a href="#">VIDEOJUEGOS</a>
         <ul>
-            <li><a href="#">Diseño Web</a></li>
-            <li><a href="#">Diseño Gráfico</a></li>
-            <li><a href="#">Programación</a></li>
-            <li><a href="#">Edición de Vídeo</a></li>
+            <li><a href="#">PC</a></li>
+            <li><a href="#">CONSOLAS</a></li>
+            <li><a href="#">MOVILES</a></li>
         </ul>
     </li>
-    <li><a href="#">Clientes</a>
+    <li><a href="#">TECNOLOGIA</a>
         <ul>
-           <li><a href="#">Casos de Éxito</a></li>
-           <li><a href="#">Internacionales</a></li>
+           <li><a href="#">MUNDO PC</a></li>
+           <li><a href="#">ANDROID</a></li>
+		    <li><a href="#">IOS</a></li>
+			 <li><a href="#">DESARROLLO</a></li>
         </ul>
     </li>
-        <li><a href="#">Multimedia</a>
+        <li><a href="#">FOTOGRAFIA</a>
         <ul>
-           <li><a href="#">Galería</a></li>
-           <li><a href="#">Vídeo Galería</a></li>
+           <li><a href="#">NOVEDADES</a></li>
+           <li><a href="#">EXPOSICIONES</a></li>
+		   <li><a href="#">NOTICIAS</a></li>
         </ul>
     </li>
-    <li><a href="#">Contacto</a></li>
+    <li><a href="#">PORTADA</a></li>
 </ul>
 			</div>
 			<div id="middle_left"><img src="img/deporte.jpg"></img></div>
