--- a/www/index.html
+++ b/www/index.html
@@ -58,10 +58,10 @@
     <li><a href="#">PORTADA</a></li>
 </ul>
 			</div>
-			<div id="middle_left"><img src="img/deporte.jpg"></img></div>
-			<div id="middle_right"><img src="img/vietnam.jpg"></img></div>
-			<div id="bottom_left"><img src="img/fabrica.jpg"></img></div>
-			<div id="bottom_right"><img src="img/Android.jpg"></img></div>
+			<div id="middle_left"></div>
+			<div id="middle_right"></div>
+			<div id="bottom_left"></div>
+			<div id="bottom_right"></div>
 			<div id="footer">
 			<div id="social_networks">
 				<a href="https://www.twitter.com/login"><img src="img/twitter.png"/></a>
