--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,13 @@
 <html>
 <LINK REL="stylesheet" HREF="css/index.css" TYPE="text/css">
-<LINK REL="stylesheet" HREF="css/menu.css" TYPE="text/css">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <title>PRESSTONEWS</title>
 </head>
 <body>
 	<div id="container">
-		<div id="upper_bar"><img src="img/logo.jpg"></img>
-			<div id="formulario">
-				<form>
-					<font color="white">user: </font> <input type="text" name="name" id="name" value="" />
-					<font color="white">pass: </font> <input type="text" name="email" id="email" value="" />
-					<input type="submit" value="submit" />
-				</form>	<br /></div>				
+			<div id="upper_bar"><img src="img/logo.jpg"></img>
+			
 			</div>
 			<div id="menu_bar">
 <ul class="menu">
@@ -55,7 +49,15 @@
 		   <li><a href="#">NOTICIAS</a></li>
         </ul>
     </li>
-    <li><a href="#">PORTADA</a></li>
+    <li><a href="#">LOGIN</a>
+	<ul>
+	<li><a href="#"></a>
+		<form>
+						<font color="white">USUARIO: </font> <input type="text" name="name" id="name" value="" />
+						<font color="white">CONTRASEÑA: </font> <input type="text" name="email" id="email" value="" />
+						<input type="submit" value="LOGIN" />
+		</form>	<br />	
+	</li></ul>
 </ul>
 			</div>
 			<div id="middle_left"></div>
